--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,7 @@
     "backbone": "~1.1.0",
     "modernizr": "~2.6.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "handlebars": "~1.1.2"
+  }
 }
